# tokenized-deposits

./: .gitignore  README.md  experiment.py  foundry.toml  pyproject.toml  tokenizedbanking.ipynb
abmodel/: agents.py  allonchain.py
abmodel/abis/: __init__.py
src/: BankVault.sol  CentralBank.sol
test/: Bank.t.sol
